--- a/CassavaDiseasesClassification.ipynb
+++ b/CassavaDiseasesClassification.ipynb
@@ -1036,6 +1036,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Using **GRID SEARCH CV** and **shuffle split** to finding the best model function by passing the dictionary containing the parameters to change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finding the best model score by using Grid search cv an shuffle split\n",
+    "# Defining the find_best_model function and passing in the dictionary containing the parameters to change.\n",
+    "\n",
+    "# import necessary libraries\n",
+    "from sklearn.model_selection import ShuffleSplit, GridSearchCV\n",
+    "\n",
+    "# defining the function\n",
+    "def find_best_model(x,y):\n",
+    "        algos = {\n",
+    "            'Random Forest' : {\n",
+    "                'model':RandomForestClassifier(),\n",
+    "                'params':{\n",
+    "                'normalize':[True,False]\n",
+    "                }\n",
+    "            },\n",
+    "            'K Nearest Neighbor':{\n",
+    "                  'model':KNeighborsClassifier(),\n",
+    "                  'params':{\n",
+    "                  'alpha':[1,2],\n",
+    "                  'selection':['random','cyclic']\n",
+    "                }\n",
+    "\n",
+    "            },\n",
+    "            'Gaussian Naive Bayes':{\n",
+    "                  'model':GaussianNB(),\n",
+    "                  'params':{\n",
+    "                  'criterion':['mse','friedman_mse'],\n",
+    "                      'splitter':['best','random']\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        scores = []\n",
+    "        cv = ShuffleSplit(n_splits=5,test_size=0.2,random_state=0)\n",
+    "        for algo_name,config in algos.items():\n",
+    "            gs = GridSearchCV(config['model'],config['params'],cv=cv,return_train_score=False)\n",
+    "            gs.fit(x,y)\n",
+    "            scores.append({\n",
+    "                'model':algo_name,\n",
+    "                'best_score':gs.best_score_,\n",
+    "                'best_params':gs.best_params_\n",
+    "            })\n",
+    "        return pd.DataFrame(scores,columns=['model','best_score','best_params'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### From the graph above, it clearly shows that the **RANDOM FOREST** \n",
     "#### algorithm is the most suitable for the classification task."
    ]
