finding the best model using GridSearchCv

--- a/CassavaDiseasesClassification.ipynb
+++ b/CassavaDiseasesClassification.ipynb
@@ -1094,7 +1094,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calling the function on our images and labels data \n",
+    "find_best_model(x,y)"
+   ]
   },
   {
    "attachments": {},
