defining the parameters

--- a/CassavaDiseasesClassification.ipynb
+++ b/CassavaDiseasesClassification.ipynb
@@ -1096,7 +1096,7 @@
    "outputs": [],
    "source": [
     "# calling the function on our images and labels data \n",
-    "find_best_model(x,y)"
+    "find_best_model(x_train_2,train_labels)"
    ]
   },
   {
